# Usporiadavanie-blokov-suboru-RP

./: .gitignore  README.md
.github/workflows/: main.yml
rp/: README.md  backtrack.py  dict_en.txt  dict_sk.txt  dictionary_creator  dictionary_creator.cpp  found.txt  frankenstein.txt  in.txt  main.py  segment.cpp  segment.py  segmentIn.cpp  test.py
rp/algorithm/: backtrack.py
rp/dictionary/: base_dictionary.py  dictionary_creator.cpp  dictionary_creator.py  frequency_dictionary.py  standard_dictionary.py  three_segment_dict_creator.py  three_sequence_dict_creator.py  three_sequence_dictionary.py  two_sequence_dictionary_creator.py
rp/sound/: CLAUDE.md  CMakeLists.txt  Header.cpp  Header.hpp  adjacency.cpp  adjacency.hpp  chunk_meta.cpp  chunk_meta.hpp  frame_scanner.cpp  frame_scanner.hpp  header.cpp  main.cpp  main.hpp
rp/sound/test/: bindings.cpp  evaluate_order.cpp  evaluate_order.py
rp/test/: test_frequency_dictionary_validator.py
rp/text/: CMakeLists.txt  example_use.cpp  example_use.py  main.cpp  segment  segment.cpp  segment.hpp  segment.py  text_util.hpp
rp/text/algorithm/: backtrack.hpp  base_algorithm.hpp  base_algorithm.py
rp/text/dictionary/: base_dictionary.py  standard_dictionary.cpp  standard_dictionary.py  three_sequence_dict_creator.hpp  three_sequence_dictionary.cpp  three_sequence_dictionary.hpp  three_sequence_dictionary.py  two_sequence_dictionary.hpp  two_sequence_dictionary.py
rp/text/test/: Results.xlsx  test_standard_dictionary_validator.py
rp/text/validation/: base_validator.hpp  base_validator.py  frequency_3_words_validator.cpp  frequency_3_words_validator.py  standard_validator.cpp
rp/validation/: base_validator.py  frequency_2_words_validator.py  frequency_3_words_validator.py  standard_validator.py
sound/: CLAUDE.md  CMakeLists.txt  PLAN_sideinfo_mainbits.md  adjacency.cpp  adjacency.hpp  chunk_meta.cpp  chunk_meta.hpp  frame_scanner.hpp  huffman_tables.cpp  huffman_tables.hpp  main.cpp
text/algorithm/: backtrack.cpp
text/dictionary/: base_dictionary.hpp  standard_dictionary.hpp  three_sequence_dict_creator.cpp  two_sequence_dictionary.cpp  two_sequence_dictionary_creator.cpp  two_sequence_dictionary_creator.hpp
text/test/: test_frequency_dictionary_validator.cpp  test_standard_dictionary_validator.cpp
text/validation/: frequency_2_words_validator.cpp  frequency_2_words_validator.hpp  frequency_3_words_validator.hpp  standard_validator.hpp
